<resources>
    <string name="app_name">DrawerProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_exit">خروج</string>
    <string name="menu_profile">پروفایل</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="menu_home">خانه</string>
    <string name="name">نام</string>
    <string name="nationalCode">کد ملی</string>
    <string name="phoneNumber">شماره تلفن</string>
    <string name="explain">sasadfghfgftfdsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="item_number">تعداد آیتم در صفحه خانه</string>
    <string name="addInfo">افزودن اطلاعات</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="register">ثبت اطلاعات</string>
    <string name="showInfo">اطلاعات شما</string>
    <string name="pink">صورتی</string>
    <string name="blue">آبی</string>
    <string name="dark">تیره</string>
    <string name="choose_theme">انتخاب تم</string>
    <string name="photo">photoUrl</string>
    <string name="change_info">تغییر اطلاعات پروفایل</string>
    <string name="accountNumber">شماره حساب:</string>
    <string name="account_num">0000000000</string>
    <string name="cartNumber">شماره کارت : </string>
    <string name="shebaNumber">شماره شبا: </string>
    <string name="account_info">اطلاعات بانکی</string>
    <string name="save">ذخیره</string>
    <string name="enter_account_num">لطفا شماره منتخب را وارد کنید</string>
    <string name="change_account_info"> تغییر اطلاعات حساب بانکی</string>
    <string name="show_info">نمایش اطلاعات</string>
    <string name="email">پست الکترونیک</string>
    <string name="dont_allowed">\" دسترسی به اطلاعات مجاز نیست \"</string>
</resources>