<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_number"
            android:layout_margin="10dp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/txv_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="4"
            android:gravity="center"
            android:layout_margin="5dp"/>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="50dp"
            android:clickable="true"
            android:focusable="true"
            android:progress="4"
            android:max="6"
            android:min="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:alpha="0.2"
            android:layout_marginHorizontal="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_theme"
            android:layout_margin="10dp"/>
        <RadioGroup
            android:id="@+id/radioGroup_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtn_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:shadowColor="@color/pink"
                android:text="@string/pink"
                android:textColor="@color/pink" />

            <RadioButton
                android:id="@+id/radioBtn_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/blue"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/radioBtn_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/dark"
                android:textColor="@color/gray" />


        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:alpha="0.2"
            android:layout_marginHorizontal="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_account_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/change_account_info"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:alpha="0.2"
            android:layout_marginHorizontal="10dp"/>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_profile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/change_info"/>





    </LinearLayout>



</ScrollView>