<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_account"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_monetization_on_24"/>

    <TextView
        android:id="@+id/txv_accountNum_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_account"
        android:text="@string/accountNumber"
        style="@style/txv_accountNumber_style" />

    <TextView
        android:id="@+id/edt_accountNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_accountNum_text"
        android:text="@string/account_num"
        style="@style/txv_accountNumber_style.numbers" />

    <TextView
        android:id="@+id/txv_cartNum_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_accountNum"
        android:text="@string/cartNumber"
        style="@style/txv_accountNumber_style" />

    <TextView
        android:id="@+id/edt_cartNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_cartNum_text"
        android:text="@string/account_num"
        style="@style/txv_accountNumber_style.numbers" />


    <TextView
        android:id="@+id/txv_shebaNum_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_cartNum"
        android:text="@string/shebaNumber"
        style="@style/txv_accountNumber_style" />

    <TextView
        android:id="@+id/txv_shebaNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_shebaNum_text"
        android:text="@string/account_num"
        style="@style/txv_accountNumber_style.numbers" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>