<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_info_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/circle_bg"
                android:src="@drawable/account_circle" />

            <TextView
                android:id="@+id/txv_name"
                style="@style/txv_profile_style"
                android:text="@string/name" />

            <TextView
                android:id="@+id/txv_nationalCode"
                style="@style/txv_profile_style"
                android:text="@string/nationalCode" />

            <TextView
                android:id="@+id/txv_phoneNumber"
                style="@style/txv_profile_style"
                android:text="@string/phoneNumber" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_not_allowed_imv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:minHeight="250dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_baseline_not_interested_24" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>